--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+    <h1> Odin Recipes </h1>
+    <li>
+        <ol> <a href="recipes/lasagna.html" target="_blank"> Lasagna </a> </ol>
+    </li>
 
 </body>
 
